admin panel, log bingo & log user

--- a/public/css/admin.styl
+++ b/public/css/admin.styl
@@ -112,6 +112,16 @@ img.adingo0
     right 40px
     height 150px
 
+.logout
+    position absolute
+    top 40px
+    right 40px
+    z-index 999
+    i
+        font-size 3rem
+        color #ef1414
+        text-shadow 0 0 1px #ef1414, 0 0 6px #ef1414, 0 0 2px #ef1414
+
 .login
     height 100vh
     background-image url('../images/fondo2.jpg')
@@ -343,7 +353,8 @@ img.adingo0
             .nombre
                 margin-top -35px
                 cursor pointer
-                span
+                button
+                    background-color transparent
                     color #fff
                     font-family font-extrabold
                     font-size 1.3rem
