--- a/public/css/admin.styl
+++ b/public/css/admin.styl
@@ -75,7 +75,29 @@ body
     text-shadow 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #e60073, 0 0 40px #e60073, 0 0 50px #e60073, 0 0 60px #e60073, 0 0 70px #e60073
   to
     text-shadow 0 0 20px #fff, 0 0 30px #ff4da6, 0 0 40px #ff4da6, 0 0 50px #ff4da6, 0 0 60px #ff4da6, 0 0 70px #ff4da6, 0 0 80px #ff4da6
-    
+
+.tooltip-inner
+    background-color #fff
+    color #000
+.tooltip.bs-tooltip-right 
+    .arrow
+        &:before
+            border-right-color #fff !important
+.tooltip.bs-tooltip-left
+    .arrow
+        &:before
+            border-left-color #fff !important
+
+.tooltip.bs-tooltip-bottom
+    .arrow
+        &:before
+            border-bottom-color #fff !important
+
+.tooltip.bs-tooltip-top
+    .arrow
+        &:before
+            border-top-color #fff !important
+
 .loading
     position fixed
     width 100vw
@@ -111,6 +133,16 @@ img.adingo0
     top 45px
     right 40px
     height 150px
+
+.regresar-sala
+    position absolute
+    top 40px
+    right 100px
+    z-index 999
+    i
+        font-size 3rem
+        color #ef1414
+        text-shadow 0 0 1px #ef1414, 0 0 6px #ef1414, 0 0 2px #ef1414
 
 .logout
     position absolute
@@ -227,6 +259,16 @@ img.adingo0
     background-position center
     background-size cover
     background-repeat no-repeat
+    span.titulo_bingo
+        text-transform uppercase
+        line-height 1.3
+        color #0ff
+        font-size 1.8rem
+        font-family font-medium
+        text-align center !important
+        padding 0
+        text-shadow 0 0 1px #fff, 0 0 10px #0ff, 0 0 2px #0ff
+        letter-spacing 7px
     .row
         height 120vh
         align-content space-around
