aleatorios únicos & diseño cartilla usuario

--- a/public/css/admin.styl
+++ b/public/css/admin.styl
@@ -363,18 +363,25 @@ img.adingo0
         width 300px
         .image
             text-align center
-            margin-top -10px
+            margin-top 0px
             img
                 width 220px
         .numbers
             display flex
             flex-wrap wrap
-            margin-top -13px
+            margin-top 0px
             width 250px
             .active
                 background-color #00ffff
                 span
                     color #000 !important
+            .number_tit
+                border-right 0 !important
+                border-bottom 0 !important
+                border-bottom 2px solid rgba(255,255,255,.8) !important
+                span
+                    color rgba(239, 20, 20, 1) !important
+                    text-shadow 0 0 2px #ef1414, 0 0 3px #ef1414, 0 0 2px #ef1414 !important
             .number
                 cursor pointer
                 height 50px
