--- a/public/css/admin.styl
+++ b/public/css/admin.styl
@@ -69,9 +69,18 @@ body
 
 @-webkit-keyframes glow0
   from
-    box-shadow 0px 0px 5px 5px rgba(255, 255, 255, 1)
+    box-shadow 0px 0px 20px 10px rgba(255, 255, 255, 1)
   to
-    box-shadow 0px 0px 5px 9px rgba(255, 255, 255, 1)
+    box-shadow 0px 0px 5px 8px rgba(255, 255, 255, 1)
+
+.glow0_blue
+    animation glow0_blue 1s ease-in-out infinite alternate
+
+@-webkit-keyframes glow0_blue
+  from
+    box-shadow 0px 0px 20px 10px #0ff
+  to
+    box-shadow 0px 0px 5px 8px #0ff
     
 .glow1
   text-align center
@@ -288,6 +297,8 @@ img.adingo0
     background-position center
     background-size cover
     background-repeat no-repeat
+    .titulo_bingo_
+        padding 0 20%
     span.titulo_bingo
         text-transform uppercase
         line-height 1.3
@@ -302,21 +313,33 @@ img.adingo0
         height 120vh
         align-content space-around
     img.adingo11
-        height 90px
+        height 112px
     .tit
-        padding-left 70px
+        padding-left 60px
         img
             height 150px
             margin-top -90px
     .content
-        margin-top -50px
+        margin-top -40px
         display flex
         align-items center
-        img.adobe-v
-            height 200px
-            margin-right -17px
+        position relative
         img.line1
-            height 230px
+            position absolute
+            height 290px
+            left 55px
+        .name
+            display flex
+            flex-direction column
+            .number_name
+                height 50px
+                width 100px
+                text-align center
+                span
+                    color #FFF
+                    font-size 1.5rem
+                    text-shadow 0 0 2px #fff, 0 0 3px #fff, 0 0 2px #fff
+                    font-family font-extrabold
         .numbers
             display flex
             flex-wrap wrap
@@ -350,7 +373,7 @@ img.adingo0
         text-align left
         padding-left 120px
         padding-left 90px
-        margin-top -10px
+        margin-top 18px
     .cartilla
         border 5px solid #00ffff
         padding 3px
@@ -366,6 +389,38 @@ img.adingo0
             margin-top 0px
             img
                 width 220px
+        .numbers_v
+            display flex
+            flex-direction column
+            flex-wrap wrap
+            height 250px
+            width 250px
+            margin-top 0
+            .active
+                background-color #00ffff
+                span
+                    color #000 !important
+            .number_v
+                cursor pointer
+                height 50px
+                width 50px
+                display flex
+                justify-content center
+                align-items center
+                border-right 1px solid rgba(255,255,255,.8)
+                border-bottom 1px solid rgba(255,255,255,.8)
+                span
+                    color #FFF
+                    font-size 1.8rem
+                    text-shadow 0 0 2px #fff, 0 0 3px #fff, 0 0 2px #fff
+                    font-family font-extrabold
+                    img.a
+                        height 50px
+                        width 50px
+            .end_right
+                border-right 0
+            .last_row
+                border-bottom 0
         .numbers
             display flex
             flex-wrap wrap
@@ -413,7 +468,7 @@ img.adingo0
             width 140px
             border-radius 50%
             background-color transparent
-            border 5px solid rgba(255, 255, 255, .8)
+            border 0px solid rgba(255, 255, 255, .8)
             display flex
             align-items center
             justify-content center
@@ -472,11 +527,11 @@ img.adingo0
         align-items center
         .adingo_button
             cursor pointer
-            height 210px
-            width 210px
+            height 220px
+            width 220px
             border-radius 50%
             background-color transparent
-            border 5px solid rgba(255, 255, 255, .8)
+            border 0px solid rgba(255, 255, 255, 1)
             display flex
             align-items center
             justify-content center
