--- a/public/static/admin/css/admin.styl
+++ b/public/static/admin/css/admin.styl
@@ -232,6 +232,28 @@ nav
 
 .layout
     display flex
+    .importar
+        padding-left 20px
+        form
+            display inline-flex
+            align-items center
+            .form-group
+                margin-bottom 0
+                label
+                    margin-bottom 0
+                    padding .25rem .75rem
+                    border 2px solid #17a2b8
+                    border-radius .25rem
+                    color #17a2b8
+        .btn-importar
+            display inline-flex
+            padding 0
+            align-items stretch
+            margin-left 10px
+            span.icon
+                background rgba(0,0,0,0.15)
+                i
+                    line-height unset
     .nav-burger-active
         transform translateX(-100%) !important
     .nav-burger-active-dispositivo
@@ -527,6 +549,20 @@ nav
             .layout-body
                 margin-top -8.5rem
                 .card
+                    .card-header
+                        flex-wrap wrap
+                        span
+                            width 100%
+                        .header_items
+                            flex-wrap wrap
+                            .crear_descargar
+                                width 100%
+                            .importar
+                                width 100%
+                                padding-left unset
+                                margin-top 12px
+                                .btn-importar
+                                    margin-left 7px
                     .card-body
                         .buscar-descarga
                             form
